frontend/tests/errors/ER-010/error_message_check/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Ambiguous parsing error message indicates where parentheses are needed | Ambiguous parsing error message mentions parentheses


&^main() -> #i32 {
    let x = 1 ? 1 : 0 ? 2 : 3;
    x
}
